added new image of Going Home, Going Home2, and added to html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<h2>Going Home</h2>
 						</header>
 						<div class="content">
-							<span class="image main"><img src="Going Home.png" alt="image of Going Home" /></span>
+							<span class="image main"><img src="Going Home2.png" alt="image of Going Home" /></span>
 						</div>
 					</section>
 
