--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 							<h2>Going Home</h2>
 						</header>
 						<div class="content">
-							<span class="image main"><img src="Going Home2.png" alt="image of Going Home" /></span>
+							<span class="image main"><img src="GoingHomeV1n2.png" alt="image of Going Home" /></span>
+						</div>
+						<div class="content">
+							<span class="image main"><img src="GoingHomeV3.png" alt="image of Going Home" /></span>
 						</div>
 					</section>
 
