added file source to Going Home

--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
 							<h2>Going Home</h2>
 						</header>
 						<div class="content">
-							<span class="image main"><img src="GoingHomeV1n2.png" alt="image of Going Home" /></span>
-						</div>
-						<div class="content">
-							<span class="image main"><img src="GoingHomeV3.png" alt="image of Going Home" /></span>
+							<span class="image main"><img src="images/Going Home.png" alt="image of Going Home" /></span>
 						</div>
 					</section>
 
